TIF Job Runner Cleanup (#676)
* merge conflicts

Signed-off-by: Joanne Wang <jowg@amazon.com>

* fixed java wildcards and changed update key name

Signed-off-by: Joanne Wang <jowg@amazon.com>

* integ test failing

Signed-off-by: Joanne Wang <jowg@amazon.com>

* fix job scheduler params

Signed-off-by: Joanne Wang <jowg@amazon.com>

* changed extension and has debug messages

Signed-off-by: Joanne Wang <jowg@amazon.com>

* clean up

Signed-off-by: Joanne Wang <jowg@amazon.com>

* fixed job scheduler plugin spi jar resolution

* cleaned up TODOs and changed job scheduler name

Signed-off-by: Joanne Wang <jowg@amazon.com>

* removed google commons unused import, updated interval setting, removed rest action

Signed-off-by: Joanne Wang <jowg@amazon.com>

* removed policy file and updated name for job scheduler

Signed-off-by: Joanne Wang <jowg@amazon.com>

* responded to comments about parameter validator and TIFMetadata

Signed-off-by: Joanne Wang <jowg@amazon.com>

* refactored ThreatIntelFeedDataService and changed variables to public static final where possible

Signed-off-by: Joanne Wang <jowg@amazon.com>

* changed opensearch-sap-threatintel to opensearch-sap-threat-intel

Signed-off-by: Joanne Wang <jowg@amazon.com>

---------

Signed-off-by: Joanne Wang <jowg@amazon.com>
Signed-off-by: Joanne Wang <109310487+jowg-amazon@users.noreply.github.com>
Co-authored-by: Surya Sashank Nistala <snistala@amazon.com>